--- a/Billing/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/Billing/WebApplication1/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -20,12 +20,17 @@
                 @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
-                @Html.Partial("_LoginPartial")
+              <ul class="nav navbar-nav">
+                <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                <li>@Html.ActionLink("About", "About", "Home")</li>
+                <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                @if (this.User.IsInRole("Admin"))
+                {
+                  <li>@Html.ActionLink("Add role", "Index", "Role")</li>
+                }
+              </ul>
+              @Html.Partial("_LoginPartial")
+              <li>@Html.ActionLink("Add invoice", "Index", "invoice")</li>
             </div>
         </div>
     </div>
