--- a/Billing/WebApplication1/Views/Customer/Edit.cshtml
+++ b/Billing/WebApplication1/Views/Customer/Edit.cshtml
@@ -1,12 +1,12 @@
 @model DTO.Models.Customer
 
 @{
-    ViewBag.Title = "CreateCustomer";
+    ViewBag.Title = "Edit";
 }
 
-<h2>CreateCustomer</h2>
+<h2>Edit</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
@@ -38,6 +38,8 @@
             </div>
         </div>
 
+        @Html.HiddenFor(model => model.Id)
+
         <div class="form-group">
             @Html.LabelFor(model => model.Company, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -46,10 +48,9 @@
             </div>
         </div>
 
-
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
