--- a/Billing/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/Billing/WebApplication1/Views/Shared/_Layout.cshtml
@@ -29,9 +29,8 @@
                   <li>@Html.ActionLink("Add role", "Index", "Role")</li>
                 }
 
-                <li>@Html.ActionLink("Add invoice", "Index", "invoice")</li>
                 <li>@Html.ActionLink("Customers", "Index", "Customer")</li>
-                <li>@Html.ActionLink("Invoice", "Index", "Invoice")</li>
+                <li>@Html.ActionLink("Invoices", "Index", "Invoice")</li>
               </ul>
               @Html.Partial("_LoginPartial")
               
