--- a/Billing/WebApplication1/Views/Customer/Index.cshtml
+++ b/Billing/WebApplication1/Views/Customer/Index.cshtml
@@ -10,43 +10,49 @@
     @Html.ActionLink("Create new customer", "CreateCustomer")
 </p>
 <table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Firstname)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Lastname)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Email)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Company)
-        </th>
-        <th></th>
-    </tr>
+  <tr>
+    <th>
+      @Html.DisplayNameFor(model => model.Id)
+    </th>
+    <th>
+      @Html.DisplayNameFor(model => model.Firstname)
+    </th>
+    <th>
+      @Html.DisplayNameFor(model => model.Lastname)
+    </th>
+    <th>
+      @Html.DisplayNameFor(model => model.Email)
+    </th>
+    <th>
+      @Html.DisplayNameFor(model => model.Company)
+    </th>
+    <th></th>
+  </tr>
 
 @foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Firstname)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Lastname)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Company)
-        </td>
+  <tr>
+    <td>
+      @Html.DisplayFor(modelItem => item.Id)
+    </td>
+    <td>
+      @Html.DisplayFor(modelItem => item.Firstname)
+    </td>
+    <td>
+      @Html.DisplayFor(modelItem => item.Lastname)
+    </td>
+    <td>
+      @Html.DisplayFor(modelItem => item.Email)
+    </td>
+    <td>
+      @Html.DisplayFor(modelItem => item.Company)
+    </td>
 
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Detail", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
+    <td>
+      @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+      @Html.ActionLink("Details", "Detail", new { id = item.Id }) |
+      @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+    </td>
+  </tr>
 }
 
 </table>
