--- a/Billing/WebApplication1/Views/Invoice/Index.cshtml
+++ b/Billing/WebApplication1/Views/Invoice/Index.cshtml
@@ -1,63 +1,80 @@
 @model IEnumerable<DTO.Models.Invoice>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "List of invoices";
 }
 
-<h2>Index</h2>
+<h2>List of invoices</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Date)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Active)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Reason)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CustomerId)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UserId)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.User)
-        </th>
-        <th></th>
-    </tr>
+  <tr>
+    <th>
+      @Html.DisplayNameFor(model => model.Id)
+    </th>
+    <th>
+      @Html.DisplayNameFor(model => model.Date)
+    </th>
+    <th>
+      @Html.DisplayNameFor(model => model.Active)
+    </th>
+    <th>
+      @Html.DisplayNameFor(model => model.Active)
+    </th>
+    <th>
+      @Html.DisplayNameFor(model => model.Reason)
+    </th>
+    <th>
+      @Html.DisplayNameFor(model => model.CustomerId)
+    </th>
+    <th>
+      Email of user
+    </th>
+    <th>
+      @Html.DisplayNameFor(model => model.InvoiceCode)
+    </th>
+    <th></th>
+  </tr>
 
 @foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Date)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Active)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Reason)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CustomerId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UserId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.User)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr
+  <tr>
+    <td>
+      @Html.DisplayFor(modelItem => item.Id)
+    </td>
+    <td>
+      @item.Date.ToShortDateString()
+    </td>
+    <td>
+      @Html.DisplayFor(modelItem => item.Active)
+    </td>
+    <td>
+      @Html.DisplayFor(modelItem => item.Finished)
+    </td>
+    <td>
+      @Html.DisplayFor(modelItem => item.Reason)
+    </td>
+    <td>
+      @Html.DisplayFor(modelItem => item.CustomerId)
+    </td>
+    <td>
+      @Html.DisplayFor(modelItem => item.User)
+    </td>
+    <td>
+      @Html.DisplayFor(modelItem => item.InvoiceCode)
+    </td>
+    <td>
+      @if (!item.Finished)
+      {
+        @Html.ActionLink("Edit", "Edit", new { id = item.Id })
+}
+
+      @Html.ActionLink("Details", "Details", new { id = item.Id }) 
+      @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+    </td>
+  </tr>
 }
 
 </table>
+
