--- a/Billing/WebApplication1/Views/Invoice/Index.cshtml
+++ b/Billing/WebApplication1/Views/Invoice/Index.cshtml
@@ -68,7 +68,7 @@
       @Html.ActionLink("Details", "Details", new { id = item.Id }) 
       @Html.ActionLink("Delete", "Delete", new { id = item.Id })
       <div>
-        @Html.ActionLink("Add Detail line", "Create" , "DetailLine" )
+        @Html.ActionLink("Add Detail line", "Create" , "DetailLine" , new{id = item.Id} , null )
       </div>
     </td>
   </tr>
