--- a/Billing/WebApplication1/Views/Invoice/Delete.cshtml
+++ b/Billing/WebApplication1/Views/Invoice/Delete.cshtml
@@ -118,7 +118,7 @@
       <div class="form-actions no-color">
         @if (Model.DetailLines.Count > 0)
         {
-        <p>Reasons for deleting: <input type = "text" id = "reason" name = "reason" value = "" required /></p>
+        <p>Reasons for deleting: <br /> <textarea id = "reason" name = "reason" value = "" class="reason" required ></textarea></p>
         }
         
 
