--- a/Billing/WebApplication1/Views/Role/Create.cshtml
+++ b/Billing/WebApplication1/Views/Role/Create.cshtml
@@ -7,9 +7,11 @@
 @using (Html.BeginForm())
 {
 <div class="form-horizontal">
-
+  @Html.AntiForgeryToken()
+ 
   @Html.EditorFor(m => m.Name, new { htmlAttributes = new { @class = "form-control", required = "required" } })
   <br />
   <input type="submit" value="Create Role" class="btn btn-secondary btn-sm" />
 </div>
 }
+
