--- a/Billing/WebApplication1/Views/Invoice/Index.cshtml
+++ b/Billing/WebApplication1/Views/Invoice/Index.cshtml
@@ -5,79 +5,89 @@
 }
 
 <h2>List of invoices</h2>
-@using (Html.BeginForm())
- {
-   <p>Search <input type="text" id="search" name="search"/></p>
-   <input type="submit" name="search" value="search" class="btn btn-success" />
- }
-<p>
-  @Html.ActionLink("Create New", "Create", new { area = "" }, new { @class = "btn btn-dark" })
-</p>
-<table class="table table-striped table-dark">
-  <thead>
-    <tr>
-      <th scope="col">
-        @Html.DisplayNameFor(model => model.Id)
-      </th>
-      <th scope="col">
-        @Html.DisplayNameFor(model => model.Date)
-      </th>
-      <th scope="col">
-        @Html.DisplayNameFor(model => model.Active)
-      </th>
-      <th scope="col">
-        @Html.DisplayNameFor(model => model.Finished)
-      </th>
-      <th scope="col">
-        @Html.DisplayNameFor(model => model.Customer)
-      </th>
-      <th scope="col">
-        Email of user
-      </th>
-      <th scope="col">
-        @Html.DisplayNameFor(model => model.InvoiceCode)
-      </th>
-    </tr>
-  </thead>
-  @foreach (var item in Model)
+<div class="search">
+  @using (Html.BeginForm(new { @class = "search" }))
   {
-    <tr>
-      <td>
-        @Html.DisplayFor(modelItem => item.Id)
-      </td>
-      <td>
-        @item.Date.ToShortDateString()
-      </td>
-      <td>
-        @Html.DisplayFor(modelItem => item.Active)
-      </td>
-      <td>
-        @Html.DisplayFor(modelItem => item.Finished)
-      </td>
-      <td>
-        @Html.DisplayFor(modelItem => item.Customer.Firstname)
-        @Html.DisplayFor(modelItem => item.Customer.Lastname)
-      </td>
-      <td>
-        @Html.DisplayFor(modelItem => item.User)
-      </td>
-      <td>
-        @Html.DisplayFor(modelItem => item.InvoiceCode)
-      </td>
-      <td>
-        @if (!item.Finished)
-        {
-          @Html.ActionLink("Edit", "Edit", new { id = item.Id })
-        }
-
-        @Html.ActionLink("Details", "Details", new { id = item.Id })
-        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-        <div>
-          @Html.ActionLink("Add Detail line", "Create", "DetailLine", new { id = item.Id }, null)
-        </div>
-      </td>
-    </tr>
+    <div class="input-group mb-3">
+      <input type="text" id="search" name="search" class="form-control" placeholder="Search by customer" aria-label="Recipient's username" aria-describedby="basic-addon2" />
+      <div class="input-group-append">
+        <input type="submit" name="search" value="search" class="btn btn-outline-secondary searchBtn" />
+      </div>
+    </div>
   }
+</div>
+  <p>
+    @Html.ActionLink("Create New", "Create", new { area = "" }, new { @class = "btn btn-dark" })
+  </p>
+  <table class="table table-striped table-dark">
+    <thead>
+      <tr>
+        <th scope="col">
+          @Html.DisplayNameFor(model => model.Id)
+        </th>
+        <th scope="col">
+          @Html.DisplayNameFor(model => model.Date)
+        </th>
+        <th scope="col">
+          @Html.DisplayNameFor(model => model.Active)
+        </th>
+        <th scope="col">
+          @Html.DisplayNameFor(model => model.Finished)
+        </th>
+        <th scope="col">
+          @Html.DisplayNameFor(model => model.Customer)
+        </th>
+        <th scope="col">
+          Email of user
+        </th>
+        <th scope="col">
+          @Html.DisplayNameFor(model => model.InvoiceCode)
+        </th>
+      </tr>
+    </thead>
+    @foreach (var item in Model)
+    {
+      <tr>
+        <td>
+          @Html.DisplayFor(modelItem => item.Id)
+        </td>
+        <td>
+          @item.Date.ToShortDateString()
+        </td>
+        <td>
+          @Html.DisplayFor(modelItem => item.Active)
+        </td>
+        <td>
+          @Html.DisplayFor(modelItem => item.Finished)
+        </td>
+        <td>
+          @Html.DisplayFor(modelItem => item.Customer.Firstname)
+          @Html.DisplayFor(modelItem => item.Customer.Lastname)
+        </td>
+        <td>
+          @Html.DisplayFor(modelItem => item.User)
+        </td>
+        <td>
+          @Html.DisplayFor(modelItem => item.InvoiceCode)
+        </td>
+        <td>
+          @if (!item.Finished)
+          {
+            @Html.ActionLink("Edit", "Edit", new { id = item.Id })
+          }
 
-</table>
+          @Html.ActionLink("Details", "Details", new { id = item.Id })
+          @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+          @if (!item.Finished)
+          {
+            <div>
+              @Html.ActionLink("Add Detail line", "Create", "DetailLine", new { id = item.Id }, null)
+            </div>
+          }
+
+        </td>
+      </tr>
+    }
+
+  </table>
 
