--- a/Billing/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/Billing/WebApplication1/Views/Shared/_Layout.cshtml
@@ -17,13 +17,16 @@
     <li class="nav-item">
       @Html.ActionLink("Invoices", "Index", "Invoice", new { area = "" }, new { @class = "nav-link" })
     </li>
+    <li class="nav-item">
+      @Html.ActionLink("Vat", "Create", "Vat", new { area = "" }, new { @class = "nav-link" })
+    </li>
     @if (this.User.IsInRole("Admin"))
     {
-      <li class="nav-item">@Html.ActionLink("Add role", "Index", "Role", new { area = "" }, new { @class = "nav-link" })</li>
+      <li class="nav-item">@Html.ActionLink("Roles", "Index", "Role", new { area = "" }, new { @class = "nav-link" })</li>
     }
-      <li class="nav-item">
-        @Html.Partial("_LoginPartial")
-      </li>
+    <li class="nav-item">
+      @Html.Partial("_LoginPartial")
+    </li>
   </ul>
 
 
